# blizzardutils

./: .clang-format  .gitignore  CMakeLists.txt
include/: blizz_api_defines.hpp  blizz_api_endpoint_builder.hpp  blizz_api_mapper.hpp  term_mapper_accessor.hpp
sources/: CMakeLists.txt
sources/app/: CMakeLists.txt  itemsFarmer.cpp
sources/lib/: CMakeLists.txt  blizz_api_endpoint_builder.cpp  blizz_api_mapper.cpp  term_mapper_accessor.cpp
sources/utest/: CMakeLists.txt  itemEndpointBuilderTest_g.cpp  itemEndpointBuilderTest_gtest.cpp  itemEndpointBuilderTestser.cpp
