cmake_minimum_required (VERSION 3.12)

project(blizzUtils)
enable_testing()

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
SET(COMPILER_WARNINGS "/W4 /WX /EHsc")
else()
SET(COMPILER_WARNINGS "-Wall")
endif()
SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} ${COMPILER_WARNINGS}")

if(NOT DEFINED OUTPUT_SUBDIR)
SET(OUTPUT_SUBDIR "out")
endif()
message("${OUTPUT_SUBDIR}")

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OUTPUT_SUBDIR}")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OUTPUT_SUBDIR}")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OUTPUT_SUBDIR}")

#3rdparties area
if(NOT DEFINED MEM_MODEL)
message( FATAL_ERROR "Memory model not defined, exiting...")
else()
if("x64" STREQUAL MEM_MODEL)
SET(3RDPARTIES_ROOT_ARCH "${3RDPARTIES_ROOT}/x64")
else()
SET(3RDPARTIES_ROOT_ARCH "${3RDPARTIES_ROOT}/x86")
endif()
endif()

message("Using root 3rdparties from ${3RDPARTIES_ROOT_ARCH}")

#GoogleTest
SET(GOOGLETEST_INC "${3RDPARTIES_ROOT_ARCH}/googletest/Debug/include")
SET(GOOGLETEST_LIB "${3RDPARTIES_ROOT_ARCH}/googletest/Debug/lib")


add_subdirectory(sources)